# sllallm

./: .gitignore  HANDOFF.md  README.md  conftest.py  pyproject.toml  requirements.txt  syllabus_classifier_claude_code_prompt.md  syllabus_edge_cases_master_v2.md  syllabus_eval_first_v5.md  syllabus_full_extraction_v4.md  syllabus_kb_strategy_v7.md  syllabus_next_step_v6.md
config/: academic_calendars.yaml  data.yaml  field_methods.yaml  label_dictionary.yaml  noise.yaml  period_timetables.yaml  school_dictionary.yaml  train.yaml
data/edge_cases/: registry.jsonl
githooks/: pre-commit
notebooks/: train_colab.ipynb
plusslla/: eval_results.jsonl
scripts/: 00_smoke_test.py  01_normalize.py  02_label.py  03_extract_candidates.py  04_build_dataset.py  05_augment.py  06_split.py  07_train.py  08_eval.py  09_predict.py  10_extract_record.py  11_coverage_compare.py  12_gold_review_build.py  13_gold_ingest.py  14_method_compare.py  15_kb_coverage.py  16_batch2_eval.py  17_winner_report.py  18_compile_report.py  19_corpus_report.py  20_dedup.py  21_ocr_backlog.py  22_synth_dataset.py  23_fp_breakdown.py  24_colab_ocr.py  25_validator_recall_probe.py
src/syllabus_classifier/: __init__.py  api.py  pipeline.py
src/syllabus_classifier/common/: __init__.py  config.py  env.py  schema.py  seed.py
src/syllabus_classifier/compile/: __init__.py  calendar_compiler.py  ics_writer.py
src/syllabus_classifier/config/: academic_calendars.yaml  label_dictionary.yaml  school_dictionary.yaml
src/syllabus_classifier/dataset/: __init__.py  build.py  split.py  synth.py
src/syllabus_classifier/dedup/: __init__.py  detect.py
src/syllabus_classifier/eval/: __init__.py  excel_harness.py  method_compare.py  method_harness.py  metrics.py
src/syllabus_classifier/extract/: __init__.py  candidate_extractor.py  event_hybrid.py  field_router.py  llm_fields.py  normalize_doc.py  ocr_backlog.py  rule_fields.py  table_plan.py
src/syllabus_classifier/kb/: __init__.py  record_resolver.py  resolver.py
src/syllabus_classifier/label/: __init__.py  (+1 more)
tests/: test_api_entry.py  test_class_time_notation.py  test_compile.py  test_compile_kind.py  test_course_code.py  test_dataset_extraction.py  test_dedup.py  test_event_contract.py  test_event_hybrid.py  test_kb_resolver.py  test_kocw_extraction.py  test_normalize.py  test_observed_failures.py  test_packaged_config.py  test_record_resolver.py  test_regression_cases.py  test_resolver_priority.py  test_reviewer_memo_cases.py  test_synth.py  test_table_plan.py
(+16 files in other folders)
