[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "syllabus-classifier"
version = "0.1.0"
description = "Syllabus time-candidate classifier — keep office hours, exams, and deadlines out of class_schedule."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# document extraction (Phase 1): text PDFs + HWP
extract = [
    "pdfplumber>=0.11",
    "pyhwp>=0.1b12",       # provides hwp5txt for .hwp files
]
# OCR for scanned PDFs (~10% of corpus, mostly KOCW). EasyOCR pulls torch;
# pdf2image needs poppler installed on the system.
ocr = [
    "easyocr>=1.7",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "numpy>=1.26",
]
# LLM-assisted labeling (Phase 2) — OpenAI key available
label = [
    "openai>=1.30",
]
# model training (Phase 7)
train = [
    "torch>=2.2",
    "transformers>=4.41",
    "datasets>=2.18",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

# Runtime KBs ship inside the package so they resolve after a plain pip install
# (no repo checkout). See common/config.py for the resolution order.
[tool.setuptools.package-data]
syllabus_classifier = ["config/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
